--- a/mobile/package.json
+++ b/mobile/package.json
@@ -12,11 +12,13 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@capacitor/android": "^6.1.2",
     "@capacitor/app": "6.0.1",
     "@capacitor/camera": "^6.0.2",
     "@capacitor/core": "6.1.2",
     "@capacitor/filesystem": "^6.0.1",
     "@capacitor/haptics": "6.0.1",
+    "@capacitor/ios": "^6.1.2",
     "@capacitor/keyboard": "6.0.2",
     "@capacitor/preferences": "^6.0.2",
     "@capacitor/status-bar": "6.0.1",
