--- a/server/Gemfile
+++ b/server/Gemfile
@@ -61,6 +61,7 @@ group :development, :test do
   gem "dotenv-rails"
   # See https://guides.rubyonrails.org/debugging_rails_applications.html#debugging-with-the-debug-gem
   gem "debug", platforms: %i[ mri mingw x64_mingw ]
+  gem 'annotate'
 end
 
 group :development do
